--- a/homescreen.css
+++ b/homescreen.css
@@ -64,3 +64,19 @@ p.Introduction {
     margin-right:10px;
     margin-top:0px;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+#targetSection {
+    margin-top: 50px;
+    padding: 20px;
+    background-color: #f0f0f0;
+}
+
+b {
+    color:rgb(233, 195, 119);
+    text-align:center;
+    font-size: 30px;
+}
